Add participant list to activity cards and style updates

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,8 +16,22 @@
       <section id="activities-container">
         <h3>Available Activities</h3>
         <div id="activities-list">
-          <!-- Activities will be loaded here -->
-          <p>Loading activities...</p>
+          <!-- Example activity card -->
+          <div class="activity-card">
+            <h4>Activity Name</h4>
+            <p>Activity description goes here.</p>
+            <p><strong>Schedule:</strong> Example schedule</p>
+            <p><strong>Availability:</strong> Example spots left</p>
+            <div class="participants">
+              <h5>Participants:</h5>
+              <ul>
+                <li>Participant 1</li>
+                <li>Participant 2</li>
+                <li>Participant 3</li>
+              </ul>
+            </div>
+          </div>
+          <!-- End of example activity card -->
         </div>
       </section>
 
